fix: state align

--- a/src/harmony/State/State.module.css
+++ b/src/harmony/State/State.module.css
@@ -1,3 +1,8 @@
+.StateBadge {
+    --badge-icon-size: auto;
+}
+
 .StateDot {
+    display: block;
     --dot-background: var(--text-ghost);
 }
